[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "jmespath"
version = "0.11.0"
description = "JSON Matching Expressions"
authors = [
    { name = "James Saryerwinnie", email = "js@jamesls.com" },
    { name = "Callan Gray", email = "callan.gray@icrar.org" },
]

[tool.poetry]
name = "jmespath"
version = "0.11.0"
description = "SKA SDP Mock Dish Devices"
authors = [
    """\
    James Saryerwinnie, Callan Gray \
    <js@jamesls.com, callan.gray@icrar.org>\
    """
]
license = "MIT"
packages = [
    { include = "jmespath" },
    { include = "bin" }
]

[tool.poetry.scripts]
jp = "bin.jp:main"

[tool.poetry.dependencies]
python = "^3.7,<3.11"

[tool.poetry.group.test.dependencies]
wheel = "^0.38.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
hypothesis = "^5.35.4"
numpy = "^1.20.0"
parameterized = "^0.9.0"